Bug 271267 - Keys for navigation (first, previous, next, last) affect zoom slider
Summary: Keys for navigation (first, previous, next, last) affect zoom slider
Status: RESOLVED FIXED
Alias: None
Product: gwenview
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.6
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: Gwenview Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-04-19 05:16 UTC by Frank Steinmetzger
Modified: 2012-10-19 13:26 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Frank Steinmetzger 2011-04-19 05:16:16 UTC
Version:           2.6 (using KDE 4.6.2) 
OS:                Linux

Now that one can jump to the first and last image using the Home and End key respectively (again thanks for that), another thing came to my attention:

When the last image is shown and I press the End key, Gwenview switches to maximum zoom. Likewise, the pressing the Home key at the first image goes to minimum zoom. Apparently, the keyboard focus jumped to the zoom slider sometimes. I cannot fully reproduce it though, it does not happen always (for instance after I did some normal browsing through the images of a directory).

In the same direction goes this:
I set Page Up/Down as alternative shortcuts to go to the previous/next image. If the first/last image is reached, the Page keys cause the image view to scroll. In my opinion this should not happen if they are assigned to an action because it breaks consistency.

Reproducible: Sometimes

Steps to Reproduce:
- open an image, e.g. from Dolphin
- jump to the last image in the directory by pressing End
- press End again -> Gwenview goes to maximum zoom (1600%)
- press Page Down (nothing should happen now b/c it is set to Next Image) -> the zoom is gradually reduced each time
- press Home to show the first image
- press Home again -> Gwenview now goes to minimum zoom
- pressing Page Up increases the zoom


Expected Results:  
Keys for navigation (first, last, previous, next) should only affect navigation, nothing else, even if their assigned action is disabled (e.g. can’t go forward because the last image is shown).

This requirement is backed up by the fact that even if I view an image from the middle of the directory and click on the zoom slider so it gets a visible focus rectangle, pressing Page Up/Down does not change the slider but shows the previous or next image (as intended).
Comment 1 Alessandro Nakamuta 2011-05-11 08:02:13 UTC
It's because the application focus on zoom slider on launch. If you focus on image this issues doesn't happen. I recommend to developers make the initial focus on image and don't on zoom slider.
Comment 2 Aurelien Gateau 2011-05-25 23:50:09 UTC
Git commit 9d8450d484d26c0b02b45c7d70b2eaacfbf97624 by Aurélien Gâteau.
Committed on 25/05/2011 at 23:49.
Pushed by gateau into branch 'master'.

Focus the current document view

Avoids putting the focus on the zoom slider.

BUG:271267

M  +3    -0    lib/documentview/documentview.cpp     

http://commits.kde.org/gwenview/9d8450d484d26c0b02b45c7d70b2eaacfbf97624