Focus the current document view

Avoids putting the focus on the zoom slider.

BUG:271267